jenkins/ArgoCD/kustomize/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  labels:
    istio.io/rev: asm-1134-4
