jenkins/ArgoCD/kustomize/base/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argocd-server
  namespace: argocd
spec:
  gateways:
    - istio-system/ingressgateway
  hosts:
    - argocd.preprod.ncrsaas.com
  http:
    - match:
        - uri:
            prefix: /argocd
      route:
        - destination:
            host: argocd-server
            port:
              number: 80
